--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 120px;
   background-color: #000000c0;
